1.店铺授权逻辑修改，静默更新授权+首次主动更新；过期后直接返回提示，人工介入重新发起授权流程。 2.完善了产品上架草稿的 api 规范（待测试），AI生成内容（待测试）
